codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__ansi16_insert_delete_uses_block_fill.snap
---
source: tui/src/diff_render.rs
expression: terminal.backend()
---
"1 +added in ansi16 mode                 "
"                                        "
"                                        "
"2 -deleted in ansi16 mode               "
