codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__apply_add_block.snap
---
source: tui/src/diff_render.rs
assertion_line: 2110
expression: terminal.backend()
---
"• Written new_file.txt (+2 -0)                                                  "
"    1 +alpha                                                                    "
"    2 +beta                                                                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
