codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__apply_delete_block.snap
---
source: tui/src/diff_render.rs
expression: terminal.backend()
---
"• Delete tmp_delete_example.txt (+0 -3)                                         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
