codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__apply_update_block_wraps_long_lines.snap
---
source: tui/src/diff_render.rs
expression: terminal.backend()
---
"• Edited long_example.txt (+1 -1)                                               "
"    1  line 1                                                                   "
"    2 -short                                                                    "
"    2 +short this_is_a_very_long_modified_line_that_should_wrap_acro            "
"       ss_multiple_terminal_columns_and_continue_even_further_beyond            "
"       _eighty_columns_to_force_multiple_wraps                                  "
"    3  line 3                                                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
