codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__apply_update_block_wraps_long_lines_text.snap
---
source: tui/src/diff_render.rs
expression: text
---
• Edited wrap_demo.txt (+2 -2)
    1  1
    2 -2
    2 +added long line w
       hich wraps and_if
       _there_is_a_long_
       token_it_will_be_
       broken
    3  3
    4 -4
    4 +4 context line wh
       ich also wraps ac
       ross
