codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__apply_update_elides_shared_leading_tabs_text.snap
---
source: tui/src/diff_render.rs
expression: text
---
• Edited tab_indent.txt (+1 -1)
    1  ……  get()
    2 -……      old_patch()
    2 +……      patch()
