codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__inline_replacement_styles.snap
---
source: tui/src/diff_render.rs
expression: snapshot
---
b fg=Some(Rgb(205, 214, 244)) bg=Some(LightRed) bold=false
e fg=Some(Rgb(205, 214, 244)) bg=Some(LightGreen) bold=false
